<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="415dp"
        android:layout_marginTop="35dp"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- First Name -->
            <TextView
                android:id="@+id/firstNameRegister_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/first_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="textPersonName"
                android:textColor="@color/white" />

            <!-- Last Name -->
            <TextView
                android:id="@+id/lastNameRegister_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="textPersonName"
                android:textColor="@color/white" />


            <!-- Age -->
            <TextView
                android:id="@+id/ageRegister_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="number"
                android:textColor="@color/white" />


            <!-- Powers -->
            <TextView
                android:id="@+id/Powers_Register_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Powers"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/powers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="text"
                android:textColor="@color/white" />

            <!-- Galaxy Region -->
            <TextView
                android:id="@+id/galaxyRegister_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Galaxy Region"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/register_spinner_select" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@+id/spinner"
                    android:layout_marginLeft="113dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/register_dropdown_arrow" />

            </RelativeLayout>

            <!-- City -->
            <TextView
                android:id="@+id/cityRegister_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="City"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="text"
                android:textColor="@color/white" />


            <!-- Planet -->
            <TextView
                android:id="@+id/planetRegister_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Planet"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Planet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="text"
                android:textColor="@color/white" />


            <!-- Alternate Name -->
            <TextView
                android:id="@+id/altName_Register_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Alternate Name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/AltName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="textPersonName"
                android:textColor="@color/white" />


            <!-- Year of Birth -->
            <TextView
                android:id="@+id/YOB_Register_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Year of Birth (YOB)"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/YOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:inputType="date"
                android:textColor="@color/white" />


         </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_btn_layout_background"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/register_charBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="whenRegisteringOnClick"
            android:text="@string/reg_char" />


    </LinearLayout>
</LinearLayout>